Modularization, Multi-Language Support & Storage Refactor